--- a/movies/templates/movies/new.html
+++ b/movies/templates/movies/new.html
@@ -1,8 +1,12 @@
 {% extends 'movies/base.html' %}
+{% load django_bootstrap5 %}
 
 {% block content %}
-<form class="m-4" action="{% url 'create' %}">
-  <div class="mb-3">
+<form class="m-4" action="" method="POST">
+  {% csrf_token %}
+  {% bootstrap_form movies_form %}
+  {% bootstrap_button button_type="submit" content="OK" %}
+  {% comment %} <div class="mb-3">
     <label for="title" class="form-label">제목</label>
     <input type="text" class="form-control" id="title" name="title" maxlength="80">
   </div>
@@ -12,6 +16,6 @@
   </div>
   <div class="d-grid gap-2">
     <button class="btn btn-primary" type="submit">리뷰 쓰기</button>
-  </div>
+  </div> {% endcomment %}
 </form>
 {% endblock  %}
